# remote-agent

./: .env.template  .envrc  .gitignore  .oxfmtrc.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  components.json  drizzle.config.ts  flake.nix  gatecheck.yaml  index.html  lefthook.yml  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  projects.local.json  tsconfig.json  tsdown.config.ts  vite.config.ts
.github/workflows/: ci.yaml
docs/: branch_naming.md  coding-guideline.md  coding-process.md  commit_message.md  database.md  e2e-exploratory-testing-process.md  openapi.json  release-note-guideline.md
drizzle/20260427002242_confused_cerebro/: migration.sql  snapshot.json
drizzle/20260427012306_flimsy_tiger_shark/: migration.sql  snapshot.json
drizzle/20260428093817_noisy_toro/: migration.sql  snapshot.json
drizzle/20260428093917_common_squirrel_girl/: migration.sql  snapshot.json
native/: Cargo.toml
native/docs/: README.md
native/scripts/: generate-openapi-rust-client.mjs
native/src/: lib.rs  main.rs
native/src/api/: client.rs  types.rs
native/src/ui/: app.rs  mod.rs
scripts/: check-bundled-licenses.ts  oxlint-plugin-remote-agent.js  prepare-publish.sh  release.ts
scripts/pack/: check.sh  pack.sh
src/: cli-program.pure.test.ts  cli-program.pure.ts  cli.ts  main.ts  serve-options.pure.test.ts  serve-options.pure.ts  tailscale.pure.test.ts  tailscale.ts
src/cli/: cli-program.pure.test.ts  cli-program.pure.ts  index.ts  same-lan.pure.test.ts  same-lan.pure.ts  same-lan.ts  serve-options.pure.test.ts  tailscale.pure.ts  (+1 more)
(+258 files in other folders)
